[gd_scene load_steps=2 format=3 uid="uid://c26pg5a1hbtka"]

[ext_resource type="Script" path="res://scripts/light.gd" id="1_doyp2"]

[node name="Light" type="Area2D"]
collision_layer = 64
collision_mask = 2
script = ExtResource("1_doyp2")

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
